# cimpyorm

./: .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  LICENSE  MANIFEST.in  README.md  conftest.py  dev-requirements.txt  doc-requirements.txt  pylint.sh  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-package.yml
cimpyorm/: .bandit  Parser.py  Writer.py  __init__.py  api.py  auxiliary.py  backend.py  backends.py  cli.py  common.py  datasets.py
cimpyorm/Backend/: Elements.py  Instance.py  Source.py  auxiliary.py
cimpyorm/Model/: Elements.py  Instance.py  Parseable.py  Schema.py  Source.py  __init__.py  auxiliary.py
cimpyorm/Model/Elements/: Base.py  Class.py  Datatype.py  Enum.py  Property.py  __init__.py
cimpyorm/Test/: __init__.py  conftest.py  test_api.py  test_aux_and_misc.py  test_data_integrity.py  test_integration_tests.py  test_loadRDFS_pytest.py  test_metadata.py  test_parser.py  test_schema.py  test_serialization.py  test_xml_merge.py
cimpyorm/Test/Deployment/: __init__.py  test_pypi_deploy.py
cimpyorm/Test/Integration/MariaDB/: test_integration_tests.py
cimpyorm/Test/Integration/MySQL/: test_integration_tests.py
cimpyorm/Test/Integration/SQLite/: test_integration_tests.py
cimpyorm/Test/test_datasets/basic_mergeable_dataset/: EQ.xml  SSH.xml  TP.xml
cimpyorm/Test/test_datasets/basic_reverse_order_merge/: SSH.xml
cimpyorm/Test/test_datasets/mergeable_dataset_w_inconsistent_class_definitions/: SSH.xml
cimpyorm/Test/test_datasets/terminal_declaration_too_generic/: EQ.xml  SSH.xml
cimpyorm/res/: LICENSE
cimpyorm/res/datasets/FullGrid/: 20171002T0930Z_1D_BE_SSH_4.xml  20171002T0930Z_1D_BE_SV_4.xml  20171002T0930Z_1D_BE_TP_4.xml  20171002T0930Z_BE_EQ_4.xml
cimpyorm/res/schemata/CIM16/: DiagramLayoutProfileRDFSAugmented-v2_4_15-16Feb2016.rdf  EquipmentBoundaryProfileRDFSAugmented-v2_4_15-16Feb2016.rdf  EquipmentProfileCoreOperationRDFSAugmented-v2_4_15-4Jul2016.rdf  EquipmentProfileCoreRDFSAugmented-v2_4_15-4Jul2016.rdf  EquipmentProfileCoreShortCircuitOperationRDFSAugmented-v2_4_15-4Jul2016.rdf  EquipmentProfileCoreShortCircuitRDFSAugmented-v2_4_15-4Jul2016.rdf  GeographicalLocationProfileRDFSAugmented-v2_4_15-16Feb2016.rdf  Profile_Dependencies.json  StateVariablesProfileRDFSAugmented-v2_4_15-16Feb2016.rdf  SteadyStateHypothesisProfileRDFSAugmented-v2_4_15-16Feb2016.rdf  TopologyBoundaryProfileRDFSAugmented-v2_4_15-16Feb2016.rdf  TopologyProfileRDFSAugmented-v2_4_15-16Feb2016.rdf
docs/: Datasets.rst  Engines.rst  Example Datasets.rst  Exploring.rst  Linter.rst  Schema.rst  Serialization.rst  about.rst  conf.py  index.rst  quickstart.rst
