[tool.poetry]
name = "cimpyorm"
version = "0.5.11"
description = "A database-backed ORM for CIM datasets."
authors = ["Thomas Offergeld <offergeld@ifht.rwth-aachen.de>"]
homepage = "http://www.ifht.rwth-aachen.de"
repository = "https://github.com/RWTH-IFHT/cimpyorm"
license = "BSD-3-Clause"
readme = "README.md"
exclude = ["cimpyorm/config.ini",
           "cimpyorm/Test/Deployment/**",
           "**/.pytest_cache/**"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.2"
networkx = "^2.2"
numpy = "^1.15"
lxml = "^4.2"
pandas = "^0.24.1"
tabulate = "^0.8.3"
tqdm = "^4.31"
openpyxl = "^2.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-cov = "^2.6"
pylint = "^2.2"
wheel = "^0.32.3"
vulture = "^1.0"
pymysql = "^0.9.3"
sphinx = "^1.8"
sphinx_rtd_theme = "^0.4.3"
toml = "^0.10.0"
sphinx-autodoc-typehints = "^1.6"
poetry-setup = "^0.3.6"

[tool.poetry.scripts]
cimpyorm = "cimpyorm.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
